--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -7,11 +7,14 @@
     Shell.FlyoutBehavior="Disabled">
 
     <TabBar>
-        <ShellContent 
-            Title="Shopping Lists" ContentTemplate="{DataTemplate local:MainPage}"
+        <ShellContent
+            Title="Shopping Lists"
+            ContentTemplate="{DataTemplate local:MainPage}"
         />
         <ShellContent
-            Title="About" ContentTemplate="{DataTemplate local:AboutPage}"
-         />
+            Title="About"
+            ContentTemplate="{DataTemplate local:AboutPage}"
+        />
     </TabBar>
+
 </Shell>
