--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -26,5 +26,6 @@
         </ListView>
         <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300"
 Clicked="OnChooseButtonClicked"/>
+        <Button Text="Delete" Clicked="OnDeleteButtonClicked"/>
     </StackLayout>
 </ContentPage>
